Update file structure
All source files are in src, and a build directory is created for all outputs

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
 .vscode
 *.o
-main
-ringTest
-gridProblemsTest
-matrixTest
-quadraticTest
-toRealTest
-euclideanDomainTest
-diophantineTest
-stepCompTest
-gridSynthTest
-multiQubitSynthesisTest
-cliffordTTest
-cliffordTest
+build
 temp
